# giraffics

./: Cargo.toml  README.md  scene.grfx
src/: canvas.rs  color.rs  coord.rs  main.rs  scene.rs  traits.rs
src/lang/: lexer.rs  parser.rs
src/scene/object/: light.rs  mod.rs  shape.rs
src/shape/: mod.rs  sphere.rs
