[package]
name = "giraffics"
version = "0.1.0"
authors = ["reids <reidswan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
env_logger = "0.7"
log = "0.4"
winit = "0.24"
winit_input_helper = "0.9"
rand = "*"
